--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 		  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
 		  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
-		  ga('create', 'UA-48317809-1', '22by7.co');
+		  ga('create', 'UA-48317809-1', 'shuffleapp.co');
 		  ga('send', 'pageview');
 	</script>
 	<style> 	
@@ -165,7 +165,7 @@ top:20px;
 
 </div>
 <footer id="footer">
-<span class="copyright">@2015 Strings</span>
+<span class="copyright">@2015 Shuffle</span>
 </footer>
 </body>
 </html>
