--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ top:20px;
 			<img src="images/logo.png" alt="Strings Logo"/>
 			
 		</h1>
-		<div id="tagline">Check out Shuffle, A Beautiful Music App on iOS which lets you share your music.</div>
+		<div id="tagline">Check out Shuffle, A Beautiful Music App on iOS which lets you share your media.</div>
         
         <div class="btncommingsoon comming_soon">Coming this April!</div>
         <div class="btncommingsoon comming_soon t35" id="watch_video">Watch Video</div>
