--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ top:20px;
 		</h1>
 		<div id="tagline">Check out Shuffle, A Beautiful Music App on iOS which lets you share your media.</div>
         
-        <div class="btncommingsoon comming_soon">Coming this April!</div>
+        <div class="btncommingsoon comming_soon">Coming 1st May!</div>
         <div class="btncommingsoon comming_soon t35" id="watch_video">Watch Video</div>
 
 	</header>
