--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <span class="fa fa-bars fa-lg"></span>
                         </button>
                         <a class="navbar-brand" href="index.html">
-                            <img src="assets/img/freeze/logo.png" alt="" class="logo">
+                            <img src="assets/img/freeze/logo_orange.png" alt="" class="logo">
                         </a>
                     </div>
 
@@ -67,8 +67,8 @@
                             </li>
                             <li><a href="#features">features</a>
                             </li>
-                            <li><a href="#reviews">reviews</a>
-                            </li>
+                            <!--<li><a href="#reviews">reviews</a>
+                            </li>-->
                             <li><a href="#screens">screens</a>
                             </li>
                             <li><a href="#demo">demo</a>
@@ -377,7 +377,7 @@
             </div>
         </section>
 
-        <section id="reviews">
+        <!--<section id="reviews">
             <div class="container">
                 <div class="section-heading inverse scrollpoint sp-effect3">
                     <h1>Reviews</h1>
@@ -464,7 +464,7 @@
                 </div>
             </div>
         </section>
-
+-->
         <section id="screens">
             <div class="container">
 
@@ -626,7 +626,7 @@
         <footer>
             <div class="container">
                 <a href="#" class="scrollpoint sp-effect3">
-                    <img src="assets/img/freeze/logo.png" alt="" class="logo">
+                    <img src="assets/img/freeze/logo_white.png" alt="" class="logo">
                 </a>
                 <div class="social">
                     <a href="#" class="scrollpoint sp-effect3"><i class="fa fa-twitter fa-lg"></i></a>
