Updated iPhone image

--- a/index.html
+++ b/index.html
@@ -133,20 +133,20 @@
                             Coming this May on iOS
                         </div>
 
-<div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="35" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
-    <a href="#getApp" class="btn btn-primary inverse btn-lg">Intro</a>
-</div>
+                        <div class="tp-caption sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="35" data-speed="1000" data-start="1700" data-easing="Power4.easeOut">
+                            <a href="#getApp" class="btn btn-primary inverse btn-lg">Intro</a>
+                        </div>
 
-<div class="tp-caption large_white_light sfb" style = "font-size : 23px !important;" data-x="550" data-y="center" data-hoffset="0" data-voffset="140" data-speed="1000" data-start="1900" data-easing="Power4.easeOut">
-    Let me know when it's done!
-</div>
+                        <div class="tp-caption large_white_light sfb" style = "font-size : 23px !important;" data-x="550" data-y="center" data-hoffset="0" data-voffset="140" data-speed="1000" data-start="1900" data-easing="Power4.easeOut">
+                            Let me know when it's done!
+                        </div>
 
-                        <div class="tp-caption sfb hidden-xs" data-x="550" data-y="center" data-hoffset="0" data-voffset="185" data-speed="1000" data-start="2100" data-easing="Power4.easeOut">
+                        <div class="tp-caption sfb" data-x="550" data-y="center" data-hoffset="0" data-voffset="185" data-speed="1000" data-start="2100" data-easing="Power4.easeOut">
 							<form action="https://docs.google.com/forms/d/1ULS1W5V26bI0gtY9aF_xouSN53B3aX8G-Q9K4iJjW7o/formResponse" method="post" id="signup" target="hidden_iframe" class="betaForm">
                             <input type="email" class="form-control" id="email" name="entry.1516800338" placeholder="Email Address" autocomplete="off" required="required" x-moz-errormessage="This field should not be left blank."/>
                         </div>
 
-                        <div class="tp-caption sfb hidden-xs" data-x="750" data-y="center" data-hoffset="0" data-voffset="185" data-speed="1000" data-start="2200" data-easing="Power4.easeOut">
+                        <div class="tp-caption sfb" data-x="750" data-y="center" data-hoffset="0" data-voffset="185" data-speed="1000" data-start="2200" data-easing="Power4.easeOut">
                             <button type="submit" class="btn btn-primary inverse btn-lg">Submit</a>
 							</form>
                         </div>
