Updated iPhone image and its position

--- a/index.html
+++ b/index.html
@@ -102,10 +102,10 @@
                         <img src="assets/img/transparent.png"  alt="slidebg1"  data-bgfit="cover" data-bgposition="left top" data-bgrepeat="no-repeat">
                         <!-- LAYERS -->
                         <!-- LAYER NR. 1 -->
-                        <div class="tp-caption lfl fadeout hidden-xs"
+                        <div class="tp-caption lfl fadeout"
                             data-x="left"
                             data-y="bottom"
-                            data-hoffset="240"
+                            data-hoffset="195"
                             data-voffset="-65"
                             data-speed="500"
                             data-start="700"
