--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
                         <meta name="author" content="">
                             <link rel="icon" href="assets/img/favicon.ico">
                                 
-                                <title>BlackTie.co - Sumo Lading</title>
+                                <title>Shuffle for iOS</title>
                                 
                                 <!-- Bootstrap core CSS -->
                                 <link href="assets/css/bootstrap.css" rel="stylesheet">
