Updated video button action

--- a/index.html
+++ b/index.html
@@ -85,16 +85,7 @@
                                 </script>
                                 <br><br>
                             </form>
-                            <button class='btn btn-conf btn-green' id="videobutton" onclick="videobuttonclick()">Video</button>
-                            <script type="text/javascript">
-                                
-                                function videobuttonclick()
-                                {
-                                    var button = document.getElementById("videobutton");
-                                    button.innerText = "Coming Soon";
-                                }
-                            
-                                </script>
+                            <button class='btn btn-conf btn-green' id="videobutton" onclick="window.open('https://www.youtube.com/watch?v=tj7gO5IaChU')" target="_blank">Watch its Promo</button>
 
                         </div><!--/mt-->
 
