Minor UI Updates

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                                 </script>
                                 <br><br>
                             </form>
-                            <button class='btn btn-conf btn-green' id="videobutton" onclick="window.open('https://www.youtube.com/watch?v=tj7gO5IaChU')" target="_blank">Watch its Promo</button>
+                            <button class='btn btn-conf btn-green' id="videobutton" onclick="window.open('https://www.youtube.com/watch?v=tj7gO5IaChU')" target="_blank">Watch Promo</button>
 
                         </div><!--/mt-->
 
@@ -98,7 +98,7 @@
         <div id="f">
             <div class="container">
                 <div class="row centered">
-                    <h2>Any questions? Or just Say Hi!</h2>
+                    <h3>For more information / For Beta Access / Maybe for just saying HI, contact us!</h3>
                     <h5><a href="mailto:contact@shuffleapp.co" target="_blank">contact@shuffleapp.co</h5>
                     
                     <p>
@@ -108,7 +108,7 @@
 
                     </p>
                     
-                    <h6 class="mt centered"> Copyright @ Shuffle 2015</h6>
+                    <h6 class="mt centered"> Copyright @ Shuffle 2015. <br><br> iPhone and Apple Watch are trademarks of Apple Inc., registered in the U.S. and other countries.</h6>
                     <img src="assets/img/mjappslogo.png" alt="">
 
                 </div><!--/row-->
