--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
 
                         <div class="mtb col-md-6">
-                            <h1>Shuffle</h1><h3>Best way to listen-share-organize your songs on iOS</h3> <br><h5>Coming this June</h5>
+                            <h1>Shuffle</h1><h3>Best way to listen-share-organize your songs on iOS</h3> <br><h5>Coming Early 2016!</h5>
     
                             <br>
 
