Updated bottom text

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div id="f">
             <div class="container">
                 <div class="row centered">
-                    <h3>For more information / For Beta Access / Maybe for just saying HI, contact us!</h3>
+                    <h3>For Beta Access, give us a shout at</h3>
                     <h5><a href="mailto:contact@shuffleapp.co" target="_blank">contact@shuffleapp.co</h5>
                     
                     <p>
